sintsx hightlight + lsp (unstable)

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8" />
     <title>Python Web IDE</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Monaco Editor -->
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
 </head>
 
 <body>
     <header>🐍 Python Web IDE</header>
 
     <main>
-        <textarea id="editor">print("Hello from Python!")</textarea>
+        <div id="editor"></div>
 
         <div class="controls">
             <button id="run">▶ Run</button>
@@ -22,7 +25,7 @@
     </main>
 
     <footer>
-        Python работает через WebAssembly (Pyodide)
+        Python (Pyodide) · Monaco Editor · Client-side
     </footer>
 
     <script src="main.js"></script>
