--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div id="messages"></div>
 
 <footer>
-    <a href="https://yar1kpr0grammer.github.io/python-online-editor/">Исходный код
+    <a href="https://github.com/yar1kpr0grammer/python-online-editor">Исходный код
     </a>
 </footer>
 
